# Process this file with automake to produce Makefile.in

lib_LTLIBRARIES = libnbeelink.la
libnbeelink_la_LIBADD = ../lib/util.o  ../lib/hmap.o ../lib/list_t.o
libnbeelink_la_SOURCES = nbee_link.cpp  
MAINTAINERCLEANFILES = Makefile.in aclocal.m4 config.guess config.sub config.h.in configure depcomp install-sh missing ltmain.sh *~ *.tar.*


